tests/specs/ecosystem/ydcjeff/ezedge/0_0_9.test
ydcjeff/ezedge/0.0.9
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'HTMLElement'.
 */ export function start_client(import_meta_url: string, fn: (el: HTMLElement, hydratable: boolean, data: unknown | null) => void): void {}
                                                                   ~~~~~~~~~~~
    at file://<tmpdir>/src/runtime/mod.ts:9:68

